# klepdicht

./: .gitignore  README.md  default_setup.yaml  pyproject.toml
.github/workflows/: actions.yml
klepdicht/: __init__.py  app.py
klepdicht/lib/controllers/: admin_controller.py  auth_controller.py  base_controller.py  room_controller.py  socketio_routes.py
klepdicht/lib/database/: database_generator.py
klepdicht/lib/models/: auth_model.py  base_model.py  message_model.py  room_model.py  settings_model.py
klepdicht/static/css/: styles.css
klepdicht/templates/: admin.html.jinja  base.html.jinja  handled.html  login.html.jinja  room.html.jinja
